# mining-permits-agents

./: .dockerignore  Dockerfile  README.md  api.py  docker-compose.yml  mock_input.json  pyproject.toml
output/: indigenous_nations.md  next_steps.md  pd_outline.md  project_parameters.md  regulatory_check.md  user_inputs.json
src/mining_agents/: api.py  crew.py  main.py
src/mining_agents/config/: agents.yaml  tasks.yaml
