[project]
name = "mining_agents"
version = "0.1.0"
description = "mining-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
    "fastapi>=0.115.12"
]

[project.scripts]
mining_agents = "mining_agents.main:run"
run_crew = "mining_agents.main:run"
train = "mining_agents.main:train"
replay = "mining_agents.main:replay"
test = "mining_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
